standard. Namely, this option instructs mail to read messages
from the file named by the first non-optional command line
argument. Therefore, the following four usage patterns are
entirely equivalent:

  mail -fin mymbox
  mail -f mymbox -in
  mail --file -in mymbox
  mail --file -i mymbox -n

In addition, the form

  mail --file=mymbox

is also allowed.  
  
** envelope command

The env[elope] command displays the SMTP envelopes of the messages
given as its arguments.

** variable command

The va[riable] command describes the known internal mail variables.
When used with arguments, only variables named in the command line are
described.

For each variable, this command prints its name, data type, current
value and a short description.

** showenvelope variable

If the `showenvelope' variable is set, print command will include the
SMTP envelope in its output.

** fromfield variable

The `fromenvelope' boolean variable, if set, instructs mail to obtain
the sender address from the `From:' header.  This is the default.
If unset, the sender address is obtained from the SMTP envelope.

** variable-strict variable

Setting this variable enables strict control over variable
settings. In this mode, mail prints warning if a user is trying to
set an unknown variable and refuses to set read-only variables.

** variable-pretty-print variable

If this variable is set, the `set' listing prints short
descriptions before each variable.

* API

* Wicket/Ticket functions

[FIXME: Describe]

* New mailbox formats

Three new append-only mailbox formats are introduced.  The URL syntax of
each of them is the same as that of the corresponding mailer.

** smtp

Send message using the `smtp' mailer.  It is equivalent to
`remote+smtp', introduced in previous version.

** sendmail.

Send message using the `sendmail' mailer.  It is equivalent to
`remote+sendmail', introduced in previous version.

** prog

Send message using the `prog' mailer.  It is equivalent to