@@ -18,21 +18,25 @@
 
 #include "mail.h"
 
-
 static char *
 source_readline (void *closure, int cont MU_ARG_UNUSED)
 {
   FILE *fp = closure;
   size_t s = 0;
   char *buf = NULL;
+  mu_debug_t debug;
+  struct mu_debug_locus locus;
   
   if (getline (&buf, &s, fp) >= 0)
     {
-      int len = strlen (buf);
-      if (buf[len-1] == '\n')
-	buf[len-1] = '\0';
+      mu_rtrim_class (buf, MU_CTYPE_SPACE);
+
+      mu_diag_get_debug (&debug);
+      mu_debug_get_locus (debug, &locus);
+      mu_debug_set_locus (debug, locus.file, locus.line + 1);
       return buf;
     }
+  
   return NULL;
 }
   
@@ -45,11 +49,12 @@ mail_source (int argc, char **argv)
 {
   FILE *fp;
   int save_term;
+  mu_debug_t debug;
   
   if (argc != 2)
     {
       /* TRANSLATORS: 'source' is a command name. Do not translate it! */
-      util_error (_("source requires an argument"));
+      util_error (_("source requires a single argument"));
       return 1;
     }
   
@@ -63,8 +68,11 @@ mail_source (int argc, char **argv)
 
   save_term = interactive;
   interactive = 0;
-  mail_mainloop(source_readline, fp, 0);
+  mu_diag_get_debug (&debug);
+  mu_debug_set_locus (debug, argv[1], 0);
+  mail_mainloop (source_readline, fp, 0);
   interactive = save_term;
+  mu_debug_set_locus (debug, NULL, 0);
   fclose (fp);
   return 0;
 }
